--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.uandroides.aprende"
+    package="com.cbedoy.apprende"
     android:versionCode="1"
     android:versionName="1.1" >
 
@@ -17,11 +17,11 @@
         android:label="@string/app_name"
         android:theme="@style/AppBaseTheme">
         <activity
-            android:name="com.uandroides.aprende.vistas.MainActivity"
+            android:name="com.cbedoy.apprende.viewcontrollers.MainActivity"
             android:label="@string/app_name" >
         </activity>
         <activity
-            android:name="com.uandroides.aprende.vistas.SplashActivity"
+            android:name="com.cbedoy.apprende.viewcontrollers.SplashActivity"
             android:label="@string/title_activity_splash" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -31,27 +31,27 @@
         </activity>
         
         <activity
-            android:name="com.uandroides.aprende.vistas.ExamenActivity"
+            android:name="com.cbedoy.apprende.viewcontrollers.ExamActivity"
             android:label="@string/title_activity_examen" >
         </activity>
         <activity
-            android:name="com.uandroides.aprende.vistas.TemasActivity"
+            android:name="com.cbedoy.apprende.viewcontrollers.ThemesActivity"
             android:label="@string/title_activity_temas" >
         </activity>
         <activity
-            android:name="com.uandroides.aprende.vistas.PerfilActivity"
+            android:name="com.cbedoy.apprende.viewcontrollers.UserProfileActivity"
             android:label="@string/title_activity_lateral" >
         </activity>
         <activity
-            android:name="com.uandroides.aprende.vistas.EstadisticasActivity"
+            android:name="com.cbedoy.apprende.viewcontrollers.StatisticsActivity"
             android:label="@string/title_activity_estadisticas" >
         </activity>
         <activity
-            android:name="com.uandroides.aprende.vistas.RegistroActivity"
+            android:name="com.cbedoy.apprende.viewcontrollers.RegistrationActivity"
             android:label="@string/title_activity_registro" >
         </activity>
         <activity
-            android:name="com.uandroides.aprende.vistas.PresentacionActivity"
+            android:name="com.cbedoy.apprende.viewcontrollers.PresentationActivity"
             android:label="@string/title_activity_presentacion" >
         </activity>
     </application>
