--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppBaseTheme">
+        android:theme="@style/Apprende">
         <activity
             android:name="com.cbedoy.apprende.viewcontrollers.MainActivity"
             android:label="@string/app_name" >
