--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -14,8 +14,7 @@
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name"
-        android:theme="@style/Apprende">
+        android:label="@string/app_name">
         <activity
             android:name="com.cbedoy.apprende.viewcontrollers.MainActivity"
             android:label="@string/app_name" >
