--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -14,7 +14,8 @@
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name">
+        android:label="@string/app_name"
+        android:theme="@style/Theme.Apprende">
         <activity
             android:name="com.cbedoy.apprende.viewcontrollers.MainActivity"
             android:label="@string/app_name" >
