--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -15,11 +15,7 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/Theme.Apprende">
-        <activity
-            android:name="com.cbedoy.apprende.viewcontrollers.MainActivity"
-            android:label="@string/app_name" >
-        </activity>
+        android:theme="@style/Theme.Apprende" >
         <activity
             android:name="com.cbedoy.apprende.viewcontrollers.SplashActivity"
             android:label="@string/title_activity_splash" >
@@ -29,30 +25,18 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        
         <activity
-            android:name="com.cbedoy.apprende.viewcontrollers.ExamActivity"
-            android:label="@string/title_activity_examen" >
+            android:name="com.cbedoy.apprende.SplashView"
+            android:label="@string/title_activity_splash_view" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
         <activity
-            android:name="com.cbedoy.apprende.viewcontrollers.ThemesActivity"
-            android:label="@string/title_activity_temas" >
-        </activity>
-        <activity
-            android:name="com.cbedoy.apprende.viewcontrollers.UserProfileActivity"
-            android:label="@string/title_activity_lateral" >
-        </activity>
-        <activity
-            android:name="com.cbedoy.apprende.viewcontrollers.StatisticsActivity"
-            android:label="@string/title_activity_estadisticas" >
-        </activity>
-        <activity
-            android:name="com.cbedoy.apprende.viewcontrollers.RegistrationActivity"
-            android:label="@string/title_activity_registro" >
-        </activity>
-        <activity
-            android:name="com.cbedoy.apprende.viewcontrollers.PresentationActivity"
-            android:label="@string/title_activity_presentacion" >
+            android:name="com.cbedoy.apprende.LoginView"
+            android:label="@string/title_activity_login_view" >
         </activity>
     </application>
 
