--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -17,15 +17,6 @@
         android:label="@string/app_name"
         android:theme="@style/Theme.Apprende" >
         <activity
-            android:name="com.cbedoy.apprende.viewcontrollers.SplashActivity"
-            android:label="@string/title_activity_splash" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-        <activity
             android:name="com.cbedoy.apprende.SplashView"
             android:label="@string/title_activity_splash_view" >
             <intent-filter>
@@ -37,6 +28,10 @@
         <activity
             android:name="com.cbedoy.apprende.LoginView"
             android:label="@string/title_activity_login_view" >
+        </activity>
+        <activity
+            android:name="com.cbedoy.apprende.ProfileView"
+            android:label="@string/title_activity_profile_view" >
         </activity>
     </application>
 
