--- a/.classpath
+++ b/.classpath
@@ -6,7 +6,7 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="gen"/>
 	<classpathentry exported="true" kind="lib" path="C:/Users/Carlos/AndroidSDK/sdk/extras/android/support/v4/android-support-v4.jar"/>
-	<classpathentry exported="true" kind="lib" path="C:/Users/Carlos/AndroidSDK/sdk/extras/android/support/v7/appcompat/libs/android-support-v4.jar"/>
-	<classpathentry exported="true" kind="lib" path="C:/Users/Carlos/AndroidSDK/sdk/extras/android/support/v7/appcompat/libs/android-support-v7-appcompat.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Carlos/AndroidSDK/sdk/extras/android/support/v7/appcompat/libs/android-support-v4.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Carlos/AndroidSDK/sdk/extras/android/support/v7/appcompat/libs/android-support-v7-appcompat.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
