--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -10,11 +10,15 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-feature android:name="android.hardware.camera" />
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/Theme.Apprende" ></application>
+        android:name=".activity.ApplicationLoader"
+        android:theme="@style/Theme.Apprende" >
+
+        </application>
 
 </manifest>
