--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -52,6 +52,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".activity.TestAdapter"
+            android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
+
+        </activity>
         <activity
             android:name=".activity.ApprendeActivity"
             android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
